--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+        use_sql_comments: true # 실행되는 JPQL 보고 싶을 때 사용 (콘솔창에 /* */ 사이에 JPQL을 표시한다.)
 
 logging.level:
   org.hibernate.SQL: debug
